css/header.css
.header a {
    text-decoration: none;
    color: inherit;
}

/* Apply Nabla font to div header h1 */
.header h1{
    font-family: 'Nabla', sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
    font-size: 98px;
    opacity: 1;
    /* Add flicker effect */
    animation: flicker 1.5s infinite alternate;     
}

/* Make header have black background color */
.header {
    width: 75%;
    background-color: rgba(24, 20, 20, 0.9);
    color: white;
    text-align: center;
    border-radius: 0px;
    border: 2px solid white;
}

@keyframes flicker {
    0%, 18%, 22%, 25%, 53%, 57%, 100% {
      text-shadow:
        0 0 4px #f3e386,
        0 0 11px #f3e386,
        0 0 19px #f3e386,
        0 0 40px #ffdf42,
        0 0 80px #ffdf42,
        0 0 90px #ffdf42,
        0 0 100px #ffdf42,
        0 0 150px #ffdf42;
    }
    20%, 24%, 55% {       
      text-shadow: none;
    }
  }

/* Media query for tablets and smaller screens */
@media screen and (max-width: 768px) {
    .header h1 {
        font-size: 64px; /* Adjust font size for smaller screens */
    }
}

/* Media query for mobile devices */
@media screen and (max-width: 480px) {
    .header h1 {
        font-size: 32px; /* Adjust font size for smaller screens */
    }
}

